# hri-safe-remote-control-system

./: README.md
hri_safety_sense/: CMakeLists.txt  package.xml
hri_safety_sense/config/: hri_safety_sense.yaml  hri_safety_sense.yaml~
hri_safety_sense/include/hri_safety_sense/: VehicleInterface.h  VscProcess.h
hri_safety_sense/launch/: hri_safety_sense_service.launch
hri_safety_sense/src/: JoystickHandler.cpp  VehicleInterface.c  VscProcess.cpp  VscProcess.h  main.cpp
